2022-06-06  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/libc.h: Add more functions

2022-06-04  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Remove feature "pic"
	* configure.ac: Add feature "freestanding"

2022-06-03  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Option "--with-libc" renamed to "--with-libc-all"

2022-06-02  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/assert.h: Macro "KERNAUX_PANIC" receives string

2022-06-01  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/ntoa.h: Protect from too long prefix

2022-05-30  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/ntoa.h: Functions "kernaux_utoa" and "kernaux_itoa"
	receive prefix
	* include/kernaux/ntoa.h: Constant "KERNAUX_UTOA_BUFFER_SIZE" renamed to
	"KERNAUX_UTOA_MIN_BUFFER_SIZE", "KERNAUX_ITOA_BUFFER_SIZE" to
	"KERNAUX_ITOA_MIN_BUFFER_SIZE"
	* include/kernaux/ntoa.h: Functions "kernaux_[u|i]toa[10|16]" return the end
	of a buffer
	* include/kernaux/ntoa.h: Functions "kernaux_[u|i]toa16" put default prefix
	* include/kernaux/ntoa.h: Add octal functions "kernaux_[u|i]toa8"
	* include/kernaux/ntoa.h: Add binary functions "kernaux_[u|i]toa2"
	* src/ntoa.h: Protect caller from invalid state in case of future assertions

2022-05-28  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.3.0 released

2022-05-24  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Test options made stable
	* configure.ac: Feature "bloat" made stable
	* src/: Use assertions everywhere (closes #14)

2022-02-02  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate position-independent code by default, disable with
	"--disable-pic"
	* configure.ac: "-Werror" by default, disable with "--disable-werror"

2022-02-01  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Generate headers conditionally depending on options
	* src/printf.c: Fix potential buffer overflow

2022-01-24  Alex Kotov  <kotovalexarian@gmail.com>
