@@ -19,7 +19,6 @@ extern "C" {
 #define KERNAUX_PRINTF_FMT_FLAGS_LONG_LONG (1u <<  9u)
 #define KERNAUX_PRINTF_FMT_FLAGS_PRECISION (1u << 10u)
 #define KERNAUX_PRINTF_FMT_FLAGS_ADAPT_EXP (1u << 11u)
-#define KERNAUX_PRINTF_FMT_FLAGS_CUSTOM    (1u << 12u)
 
 enum KernAux_PrintfFmt_Type {
     KERNAUX_PRINTF_FMT_TYPE_NONE,
@@ -29,7 +28,6 @@ enum KernAux_PrintfFmt_Type {
     KERNAUX_PRINTF_FMT_TYPE_EXP,
     KERNAUX_PRINTF_FMT_TYPE_CHAR,
     KERNAUX_PRINTF_FMT_TYPE_STR,
-    KERNAUX_PRINTF_FMT_TYPE_CUSTOM,
     KERNAUX_PRINTF_FMT_TYPE_PTR,
     KERNAUX_PRINTF_FMT_TYPE_PERCENT,
 };
